# RustExam

./: Cargo.toml  README.md  requirements.txt
StreamlitApp/: document_manager.py  pages_sections.toml  start.py  startpage.py
src/: db.rs  main.rs  models.rs
src/api_handlers/: file_handlers.rs  mod.rs  user_handlers.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/database/: file_db.rs  mod.rs  user_db.rs
