[package]
name = "poem_api"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3.0", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
jsonwebtoken = "9.1.0"
poem-grants = "3.0.2"
futures = "0.3.28"
mongodb = "3.2.3"
tokio-util = "0.7"
futures-util = "0.3.31"
bson = "2"
bytes = "1"


